[gd_scene load_steps=2 format=4 uid="uid://cb83b4ld3037i"]

[ext_resource type="Script" uid="uid://ch45u72wx71r" path="res://scripts/dialog_area.gd" id="1"]

[node name="DialogArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
